# Fly-in

./: .gitignore  Intra Projects Fly-in Edit.html  Makefile  README.md  a  eval_sheet.md  fly-in_eval_sheet.txt  pyproject.toml
maps/custom/: error_bad_names.txt  error_broken_metadata.txt  error_duplicate_coords.txt  error_invalid_fleet.txt  error_malformed.txt  error_no_hubs.txt  error_start_is_end.txt  error_unreachable.txt  error_zero_capacity.txt  error_zero_link.txt  priority_puzzle.txt  restricted_path.txt
maps/easy/: 01_linear_path.txt
src/: __main__.py
src/Graph/: __init__.py  dijkstra.py  graph.py  pathfinder.py
src/Parsing/: __init__.py  parse_map.py  parse_maps.py  validators.py
src/Simulation/: __init__.py  drone.py  simulation.py  visualizer.py
src/Visualizer/: __init__.py  button.py  game_manager.py  text_renderer.py  visualizer.py
src/core/: __init__.py  connection.py  drone.py  drone_map.py  zone.py
src/dijkstra/: __init__.py  dijkstra.py
src/fly_in.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parsing/: __init__.py  parse_map.py
src/simulation/: __init__.py  simulation.py
src/visualizer/: __init__.py  _protocol.py  _renderer_mixin.py  _ui_mixin.py  _window_mixin.py  button.py  manager.py  text_renderer.py  visualizer.py
